Atualizando alguns breakpoints

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Projeto Qr Code</title>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-fundo font-roboto">
-    <div class="bg-white h-[300px] w-[500px] rounded-lg p-5 duration-300" id="container">
+    <div class="bg-white h-[300px] w-[500px] max-md:w-[450px] max-sm:w-[350px] rounded-lg p-5 duration-300" id="container">
         <header id="qr-header" class="text-center">
             <h1 class="text-4xl font-bold mb-3">Gerador de QR Code</h1>
             <p class="text-gray-500 text-[0.9rem]">Insira uma Url ou Texto, para criar um QR Code</p>
