--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/build.css">
+    <link rel="stylesheet" href="src/css/build.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -20,9 +20,9 @@
             <button class="botoes bg-botao-qr-code text-white text-base mt-5 cursor-pointer opacity-85 duration-200 hover:opacity-100">Gerar QR Code</button>
         </div>
         <div id="qr-code" class="flex justify-center mt-12 opacity-0 transition-opacity duration-300">
-            <img src="img/qrcode.png" alt="QR Code">
+            <img src="src/img/qrcode.png" alt="QR Code">
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
